Projects.jsx: fixed layout issue and deleted irrelevant projec

--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -1,5 +1,10 @@
 @use "../../app/theme" as *;
 
+section#Projects {
+    overflow: visible;
+    width: 100%;
+}
+
 .portfolio {
     .progress {
         position: sticky;
@@ -27,6 +32,7 @@
         align-items: center;
         justify-content: center;
         width: 100%;
+        height: 100svh;
 
         .wrapper {
             height: 100%;
